[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation_schedular"
version = "0.1.0"
description = "Realistic EO constellation scheduling simulator"
authors = [
    {name = "Anshuman", email = "anshuman.contact07@gmail.com"}
]
dependencies = []
requires-python = ">=3.9"
